10/2/23:
-Mesh transform buffer bug where transforms would get skipped fixed
-Shadow acne fix on spotlights
-Fixed billboard lighting/normal mapping
-Fixed material previews
-Fixed meshinstancegroup bug where instances would not be dequeued from updating after being removed
-Fixed alpha-tested materials' previews not rendering correctly due to transparency composite shader not accounting for different texture sizes

7/12//23:
-More particle parameters - acceleration, scale/colour/opacity over time
-Animated spritesheet/flipbook support on materials
-Interpolation graphs that work on CPU and GPU

5/12/23:
-Billboards supported for particle emitters
-Rewrote auto-instancing system to be a bit more general and use new buffer classes
-General refactoring

3/12/23:
-Particle emitter serialization
-More parameters for particle emitters, custom mesh/material support
-Particle transform memory optimizations (switched to quats for rotation)
-Random rotations for particles

1/12/23:
-Better random velocity vector generation for particles using IQ's random function
-Some parameters added to particle emitters

29/11/23:
-A start on GPU particle system and particle emitter components
-Some utilities like ShaderVariants
-Refactoring and bugfixing

22/11/23:
-Physx material assets, component implementation
-Editor UI changes
-Terrain quadtree fixes to improve chunk seams


20/11/23:
-ACES tonemapping
-Fixed asset manager attempting to load both release and debug precompiled scripts

19/11/23:
-Rough implementation of physx 5.1+ vehicles (currently 4-wheeled car support), will rewrite once engine supports skeletal animation

16/11/23:
-Multi-selection (selection by dragging a box over the screen) in editor
-Ctrl-z (undo) and ctrl-shift-z (redo) support in editor
-General settings menu in editor
-Fixed script member parsing when members are initialized with curly braces or not initialized

14/11/23:
-Fixed terrain AABB generation causing improper culling

13/11/23: