@@ -1,6 +1,15 @@
 #pragma once
+
+
 namespace ORNG {
 	class DirectionalLight;
+
+	struct Box2D {
+		Box2D(glm::vec2 t_min, glm::vec2 t_max) : min(t_min), max(t_max) {};
+		Box2D() = default;
+		glm::vec2 min;
+		glm::vec2 max;
+	};
 
 	class ExtraMath
 	{
@@ -34,7 +43,6 @@ namespace ORNG {
 		static glm::mat3 Init2DScaleTransform(float x, float y);
 		static glm::mat3 Init2DRotateTransform(float rot);
 		static glm::mat3 Init2DTranslationTransform(float x, float y);
-
 
 		static glm::vec3 ScreenCoordsToRayDir(glm::mat4 proj_matrix, glm::vec2 coords, glm::vec3 cam_pos, glm::vec3 cam_forward, glm::vec3 cam_up, unsigned int window_width, unsigned int window_height);
 	};
